<resources>
    <string name="app_name">Calcolatore codice fiscale</string>
    <string name="Welcome_text">Calcola il tuo codice fiscale</string>
    <string name="Go_Button">vai</string>
    <string name="Exit">esci</string>

    <!--Dates-->
    <string name="name">Inserire il nome</string>
    <string name="surname">Inserire il cognome</string>
    <string name="date">Inserire l\'anno</string>
    <string name="day">Inserire il giorno</string>
    <string name="men">uomo</string>
    <string name="women">donna</string>

    <!--Toast-->
    <string name="Error_Date">Lunghezza non valida</string>

    <!--Live Data CF string-->
    <string name="CF_live_Data">Il tuo codice fiscale è: %s</string>


    <!--String recap-->
    <string name="nameRecap">Il tuo nome è: %s</string>
    <string name="surnameRecap">Il tuo cognome è: %s</string>
    <string name="dateRecap">Data di nascita: %s</string>
    <string name="monthRecap">Mese di nascita: %s</string>
    <string name="dayRecap">Giorno di nascita: %s</string>
    <string name="sexRecap">Sesso: %s</string>
    <string name="cityRecap">Luogo di nascita: %s</string>



</resources>