<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="AppViewModel"
            type="com.example.calculator_cf.AppViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".getSex">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Live_CF_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/CF_live_Data" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="Inserire il sesso"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Live_CF_Text"
                tools:text="inserire il sesso" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="141dp"
                android:layout_height="129dp"
                android:layout_marginTop="72dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.24">

                <RadioButton
                    android:id="@+id/men"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textAlignment="center"
                    />

                <RadioButton
                    android:id="@+id/women"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/women"
                    android:textAlignment="center"
                    />
            </RadioGroup>

            <Button
                android:id="@+id/button_sex"
                android:layout_width="126dp"
                android:layout_height="48dp"
                android:layout_marginBottom="204dp"
                android:text="@string/Go_Button"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.754"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/returnDate"
                android:layout_width="126dp"
                android:layout_height="48dp"
                android:layout_marginBottom="204dp"
                android:text="indietro"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.263"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>